# crystfel-reduction

./: README.md  project_template.yaml  pyproject.toml
manual-tests/: test.py
notebooks/: evaluate_merge_stats.ipynb  geometry_results.ipynb  indexing_results.ipynb  light_v_dark_cchalf.ipynb
src/: config.py  constants.py  datalist.py  geometry.py  index.py  swissfel.py  utils.py
src/scripts/: compile_stats.py  custom_split.py  index_all_runs.py  index_tag.py  merge-runset.py  merge_runset.py  optimize_each_runs_geometry.py  set_mtz_cell_to_standard.py
