[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "crystred"
version = "0.0.1"
authors = [
    {name = "TJ Lane", email = "thomas.lane@desy.de"},
]
description = "tooling to help run crystfel"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gemmi",
    "matplotlib",
    "numpy",
    "pandas",
    "pydantic",
    "PyYAML",
    "regex",
    "tqdm",
]

[project.scripts]
compile-stats = "crystred.scripts.compile_stats:main"
custom-split = "crystred.scripts.custom_split:main"
index-all-runs = "crystred.scripts.index_all_runs:main"
merge-runset = "crystred.scripts.merge_runset:main"
optimize-geometry = "crystred.scripts.optimize_each_runs_geometry:main"

[tool.setuptools]
package-dir = {"crystred" = "src"}
packages = ["crystred", "crystred.scripts"]